updated readme image

--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -78,7 +78,6 @@
    "outputs": [],
    "source": [
     "# create soup object\n",
-    "\n",
     "html = browser.html\n",
     "soup = bs(html, 'html.parser')"
    ]
@@ -606,7 +605,7 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -651,287 +650,8 @@
     "scrolled": true
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Reference Code Attempts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # HTML object\n",
-    "# html = browser.html\n",
-    "\n",
-    "# Create BeautifulSoup object; parse with 'html.parser'\n",
-    "# soup = bs(html, 'html.parser')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Mongo DB stuff\n",
-    "\n",
-    "# # Initialize PyMongo to work with MongoDBs\n",
-    "# conn = 'mongodb://localhost:27017'\n",
-    "# client = pymongo.MongoClient(conn)\n",
-    "\n",
-    "# # Define database and collection\n",
-    "# db = client.nhl_db\n",
-    "# collection = db.articles"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#     # Dictionary to be inserted into MongoDB\n",
-    "#     post = {\n",
-    "#         'title': header,\n",
-    "#         'paragraph': subheader,\n",
-    "#     }\n",
-    "\n",
-    "#     # Insert dictionary into MongoDB as a document\n",
-    "#     collection.insert_one(post)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Retrieve page with the requests module\n",
-    "# response = requests.get(url)\n",
-    "\n",
-    "# # collect the latest News Title and Paragraph Text. \n",
-    "# results = soup.find_all('div', class_='content_title')\n",
-    "# results = soup.find_all('div', class_='list_text')\n",
-    "# results = soup.find_all('div', class_='bottom_gradient')\n",
-    "# results = soup.find_all('h3', class_='list_text')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for result in results: \n",
-    "#     titles = soup.find_all('div', class_='content_title')\n",
-    "# #     paragraph = result.find('div', class_='article_teaser_body').text\n",
-    "   \n",
-    "#     # print article info\n",
-    "#     print('-----------------')\n",
-    "#     print(titles)\n",
-    "# #     print(paragraph)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Print all title texts\n",
-    "# titles = soup.find_all('div', class_='content_title')\n",
-    "# for title in titles:\n",
-    "#     print(title.text)\n",
-    "\n",
-    "# titles = soup.find_all('h3')\n",
-    "# for title in titles:\n",
-    "#     print(title)\n",
-    "\n",
-    "# titles = soup.find_all('h3')\n",
-    "# for title in titles:\n",
-    "#     print(title.text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Extract title text\n",
-    "# title = soup.title.text\n",
-    "# print (title)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for result in results: \n",
-    "#     title = result.find('div', class_='content_title').text\n",
-    "#     paragraph = result.find('div', class_='article_teaser_body').text\n",
-    "   \n",
-    "#     # print article info\n",
-    "#     print('-----------------')\n",
-    "#     print(title)\n",
-    "#     print(paragraph)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # loop over results to get article title and paragraph and store in lists for later\n",
-    "# titles = []\n",
-    "# for result in results:\n",
-    "#     if (div.content_title):\n",
-    "#         if (div.content_title.text):\n",
-    "#             titles.append(div)\n",
-    "        \n",
-    "#     # scrape the article title \n",
-    "# #     title = result.find('div', class_='content_title').text\n",
-    "# #     paragraph = result.find('div', class_='article_teaser_body').text\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# planet_df.rename(columns={\"0\": \"Property\", \"1\": \"Measurement\"}, inplace=True)\n",
-    "# planet_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# *** OTHER CODE **** \n",
-    "# for title in titles:\n",
-    "#     print(title.text)\n",
-    "\n",
-    "# titles = soup.find_all('h3')\n",
-    "# for title in titles:\n",
-    "#     print(title)\n",
-    "\n",
-    "# titles = soup.find_all('h3')\n",
-    "# for title in titles:\n",
-    "#     print(title.text)\n",
-    "\n",
-    "\n",
-    "# title = soup.find_all('div', class_='content_title')[1].text\n",
-    "# paragraph = soup.find_all('div', class_='article_teaser_body')[0].text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# need a for-loop to iterate over the images?\n",
-    "\n",
-    "# This works\n",
-    "# images = soup.find('img', class_='thumb')['src']\n",
-    "\n",
-    "# But this doesn't. Error: list indices must be integers or slices, not str - so I guess \n",
-    "# images = soup.find_all('img', class_='thumb')['src']\n",
-    "\n",
-    "\n",
-    "# Try this- ok this works, and entering diff index yields different image source, but it provides all the \n",
-    "# info in the image tag. I want just the source. Need to get just the source, then iterate over these.  \n",
-    "# tried to add src into the params, does not work. SyntaxError: positional argument follows keyword argument\n",
-    "# images = soup.find_all('img', class_='thumb')[0]\n",
-    "# print (images)\n",
-    "\n",
-    "# images = soup.find_all('img', class_='thumb')\n",
-    "# print (images)\n",
-    "\n",
-    "# # what about just this - ok, this lists all of the image tag contents for each one \n",
-    "# images = soup.find_all('img', class_='thumb')\n",
-    "# print (images)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#     time.sleep(1)"
+    "#see scrape_mars.py, app.py, and templates/index.html "
    ]
   }
  ],
